--- a/src/views/Slides.css
+++ b/src/views/Slides.css
@@ -26,6 +26,9 @@
   padding: 20px;
   margin-top: 10vh;
 }
+#slidingOffer__secondText {
+  font-size: large;
+}
 #slidingOffer__h2,
 #slidingOffer__secondText {
   margin-left: 5vw;
@@ -34,7 +37,7 @@
   padding-bottom: 12px;
 }
 #slidingOffer__h2 {
-  font-weight: 700;
+  font-weight: 900;
 }
 #slidingOffer__accExisted {
   margin: 2vh 0 0 5vw;
@@ -59,6 +62,7 @@
     height: 100vh;
   }
   .text {
+    width: 100% !important;
     margin-top: 60% !important;
     margin-left: 0% !important;
   }
@@ -79,5 +83,8 @@
     margin: 0 !important;
     width: 100%;
     height: 70%;
+  }
+  #slidingOffer__secondText {
+    font-size: 14px;
   }
 }
